// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ListRow correctly with expandable row 1`] = `
<div
  className="wrapper"
>
  <div
    className="row"
  >
    <div
      className="infoCol"
    >
      <div
        className="draggable"
      >
        <svg
          aria-labelledby="eds-unfold_more-3"
          className="sc-iwyYcG dqcEJR"
          fill="#007079"
          height="24px"
          name={null}
          role="img"
          title="Move"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-unfold_more-3"
          >
            Move
          </title>
          <path
            className="sc-cxFLnm"
            clipRule="evenodd"
            d="M15.17 9L12 5.83 8.83 9 7.41 7.59 12 3l4.58 4.59L15.17 9zm-6.34 6L12 18.17 15.17 15l1.42 1.41L12 21l-4.58-4.59L8.83 15z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform={null}
          />
        </svg>
      </div>
      <div
        className="info"
      >
        <p
          className="sc-eCssSg fvZGxZ"
        >
          First item
        </p>
        <p
          className="sc-eCssSg bHjGEK"
        >
          Sub title
        </p>
      </div>
    </div>
    <div
      className="iconCol"
    >
      <button
        className="iconButton"
        onClick={[MockFunction]}
      >
        <svg
          aria-labelledby="eds-edit-4"
          className="sc-iwyYcG dqcEJR"
          fill="#007079"
          height="24px"
          name={null}
          role="img"
          title="edit"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-edit-4"
          >
            edit
          </title>
          <path
            className="sc-cxFLnm"
            clipRule="evenodd"
            d="M18.368 3.29l2.34 2.34c.39.39.39 1.02 0 1.41l-1.83 1.83-3.75-3.75 1.83-1.83c.19-.19.44-.29.7-.29.26 0 .51.09.71.29zM2.998 17.25V21h3.75l11.06-11.06-3.75-3.75-11.06 11.06zM5.918 19h-.92v-.92l9.06-9.06.92.92L5.918 19z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform={null}
          />
        </svg>
      </button>
      <button
        className="activeIconButton"
        onClick={[Function]}
      >
        <svg
          aria-labelledby="eds-more_vertical-5"
          className="sc-iwyYcG dqcEJR"
          fill="#007079"
          height="24px"
          name={null}
          role="img"
          title="Expand"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-more_vertical-5"
          >
            Expand
          </title>
          <path
            className="sc-cxFLnm"
            clipRule="evenodd"
            d="M12 8c1.1 0 2-.9 2-2s-.9-2-2-2-2 .9-2 2 .9 2 2 2zm0 2c-1.1 0-2 .9-2 2s.9 2 2 2 2-.9 2-2-.9-2-2-2zm-2 8c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform={null}
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    className="expandedRow"
  >
    <button
      className="iconButton"
      onClick={[MockFunction]}
    >
      <svg
        aria-labelledby="eds-edit-6"
        className="sc-iwyYcG dqcEJR"
        fill="#007079"
        height="24px"
        name={null}
        role="img"
        title="edit"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="eds-edit-6"
        >
          edit
        </title>
        <path
          className="sc-cxFLnm"
          clipRule="evenodd"
          d="M18.368 3.29l2.34 2.34c.39.39.39 1.02 0 1.41l-1.83 1.83-3.75-3.75 1.83-1.83c.19-.19.44-.29.7-.29.26 0 .51.09.71.29zM2.998 17.25V21h3.75l11.06-11.06-3.75-3.75-11.06 11.06zM5.918 19h-.92v-.92l9.06-9.06.92.92L5.918 19z"
          data-testid="eds-icon-path"
          fillRule="evenodd"
          height="24"
          size={null}
          transform={null}
        />
      </svg>
    </button>
    <button
      className="iconButton"
      onClick={[Function]}
    >
      <svg
        aria-labelledby="eds-close-7"
        className="sc-iwyYcG dqcEJR"
        fill="#007079"
        height="24px"
        name={null}
        role="img"
        title="Close"
        viewBox="0 0 24 24"
        width="24px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="eds-close-7"
        >
          Close
        </title>
        <path
          className="sc-cxFLnm"
          clipRule="evenodd"
          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
          data-testid="eds-icon-path"
          fillRule="evenodd"
          height="24"
          size={null}
          transform={null}
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`renders ListRow correctly without expandable row 1`] = `
<div
  className="wrapper"
>
  <div
    className="row"
  >
    <div
      className="infoCol"
    >
      <div
        className="draggable"
      >
        <svg
          aria-labelledby="eds-unfold_more-1"
          className="sc-iwyYcG dqcEJR"
          fill="#007079"
          height="24px"
          name={null}
          role="img"
          title="Move"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-unfold_more-1"
          >
            Move
          </title>
          <path
            className="sc-cxFLnm"
            clipRule="evenodd"
            d="M15.17 9L12 5.83 8.83 9 7.41 7.59 12 3l4.58 4.59L15.17 9zm-6.34 6L12 18.17 15.17 15l1.42 1.41L12 21l-4.58-4.59L8.83 15z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform={null}
          />
        </svg>
      </div>
      <div
        className="info"
      >
        <p
          className="sc-eCssSg fvZGxZ"
        >
          First item
        </p>
        <p
          className="sc-eCssSg bHjGEK"
        >
          Sub title
        </p>
      </div>
    </div>
    <div
      className="iconCol"
    >
      <button
        className="iconButton"
        onClick={[MockFunction]}
      >
        <svg
          aria-labelledby="eds-edit-2"
          className="sc-iwyYcG dqcEJR"
          fill="#007079"
          height="24px"
          name={null}
          role="img"
          title="edit"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="eds-edit-2"
          >
            edit
          </title>
          <path
            className="sc-cxFLnm"
            clipRule="evenodd"
            d="M18.368 3.29l2.34 2.34c.39.39.39 1.02 0 1.41l-1.83 1.83-3.75-3.75 1.83-1.83c.19-.19.44-.29.7-.29.26 0 .51.09.71.29zM2.998 17.25V21h3.75l11.06-11.06-3.75-3.75-11.06 11.06zM5.918 19h-.92v-.92l9.06-9.06.92.92L5.918 19z"
            data-testid="eds-icon-path"
            fillRule="evenodd"
            height="24"
            size={null}
            transform={null}
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
